# bank

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/bank/: settings.py
src/bank/api/: account.py  client.py  main.py  transaction.py
src/bank/dao/: account_dao.py  base_dao.py  client_dao.py  exception.py  transaction_dao.py
src/bank/orm/: client_orm.py  db.py  object_orm.py  transaction_orm.py
src/bank/pojo/: account_model.py  base_model.py  client_model.py  transaction_model.py
tests/api/: test_client.py
tests/orm/: conftest.py  fixtures.py  test_account.py  test_client.py  test_transaction.py
